--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,11 +6,11 @@ html {
   box-sizing: inherit; 
 }
 
-body {
+body {white-space-collapse: break-strict
+
   font-family: sans-serif;
 
   margin: 0;
-  // background-image: linear-gradient(260deg, #2376ae 0%, #6ECF83 100%); 
 
   background: linear-gradient(to right, rgba(45, 168, 236,0), rgba(45, 168, 236, 0.9));
 }
