Add icon class for fontawesome

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,15 @@
 @import "base/all-base";
 @import "modules/all-modules";
+
+.icon::before {
+  display: inline-block;
+  margin-right: .5em;
+  font: normal normal normal 16px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+}
+
+
