--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,4 +12,13 @@
   transform: translate(0, 0);
 }
 
+footer {
+  text-align: center;
+  background: rgba(0,0,0,0.2);
+  padding: 20px;
+  margin: 20px 0;
+  color: white;
+  font-weight: 100;
+}
+
 
