Setup for the page layout

--- a/src/sass/base/_all-base.scss
+++ b/src/sass/base/_all-base.scss
@@ -30,3 +30,12 @@ a {
 a:hover {
   background: rgba(0,0,0,0.5);
 }
+
+section {
+  text-align: center;
+  background:rgba(0,0,0,0.2);
+  padding:20px;
+  margin:20px 0;
+  color:white;
+  font-weight: 100;
+}
