--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -1,10 +1,31 @@
-footer {
-  text-align: center;
-  background: rgba(0,0,0,0.2);
-  padding: 20px;
-  margin: 20px 0;
+// footer {
+//   text-align: center;
+//   background: rgba(0,0,0,0.2);
+//   padding: 20px;
+//   margin: 20px 0;
+//   color: white;
+//   font-weight: 100;
+// }
+
+.footer {
+	width: 100%;
   color: white;
   font-weight: 100;
+  background: rgba(0,0,0,0.9);
+
+  &__section {
+  	padding: 30px;
+  	font-size: 12px;
+  }
+
+  &__item {
+  	text-align: center;
+
+	 	a {
+	  	color: gold;
+	  	padding: 0;
+  	}
+  }
 }
 
 @media all and (max-width: 500px) {
