--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -12,20 +12,25 @@
   	justify-content: space-between;
   }
 
-   // TODO: color background for testing only
+	// Placehoder section:
   &__section:nth-of-type(1) {
   	// background: cornsilk;
   	flex: 3 4 100%;
   }  
 
+  // copyright etc. section:
   &__section:nth-of-type(2) {
   	// background: cyan;
   	flex: 4 3 100%;
+  	align-items: center; 
   }  
 
+  // Social section:
   &__section:nth-of-type(3) {
-  	background: crimson;
+  	// background: crimson;
   	flex: 3 4 100%;
+  	display: flex;
+  	justify-content: flex-end;
   }
 
 	&__item:nth-of-type(1) {
@@ -42,6 +47,10 @@
 
   &__item:nth-of-type(4) {
   	flex: 2 2 auto;
+  }
+
+  &__social {
+
   }
 }
 
