--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -1,12 +1,3 @@
-// footer {
-//   text-align: center;
-//   background: rgba(0,0,0,0.2);
-//   padding: 20px;
-//   margin: 20px 0;
-//   color: white;
-//   font-weight: 100;
-// }
-
 .footer {
 	width: 100%;
   color: white;
@@ -14,22 +5,37 @@
   background: rgba(0,0,0,0.9);
 
   &__section {
-  	padding: 30px;
+  	padding: 10px 0 10px 0;
   	font-size: 12px;
   }
 
   &__item {
   	text-align: center;
-
 	 	a {
 	  	color: gold;
 	  	padding: 0;
   	}
   }
+
+  &__social {
+  	margin: 0;
+  	padding: 0;
+  	a {
+  		padding: 0;
+  		color: #000;
+  	}
+
+  	.footer__socialCircle  {
+	  	color: gold;
+  	}
+
+  	.footer__socialIcon {
+  		color: #000;
+  	}
+  }
 }
 
 @media all and (max-width: 500px) {
-
 	.mobileFooter {
 	  width: 100%;
 	  
