--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -3,7 +3,7 @@
 	top: 0;
 	left: 0;
 
-	border: 1px solid crimson;
+	// border: 1px solid crimson;
 
 	display: flex;
 
@@ -11,22 +11,24 @@
 		display: flex;
 	}
 
+	// logo section:
 	&__section:nth-of-type(1) {
-	  background: burlywood;
-		flex: 1 2 15%;
+	  // background: burlywood;
+		flex: 2 2 30%;
 	}
 
+	// site menu bar section:
 	&__section:nth-of-type(2) {
-	  background: blueviolet;
-		flex: 8 6 70%;
-	  
-
+	  // background: blueviolet;
+		flex: 6 6 40%;
+		justify-content: center;
 	}
 
+	// service menu bar section:
 	&__section:nth-of-type(3) {
-	  background: darkmagenta;
-		flex: 1 2 15%;
-
+	  // background: darkmagenta;
+		flex: 2 2 30%;
+		justify-content: flex-end;
 	}
 }
 
