--- a/src/sass/modules/_navigation.scss
+++ b/src/sass/modules/_navigation.scss
@@ -6,21 +6,35 @@
   // background: #000;
 
   &__section {
-	  // background: #000;
+	  background: #000;
 	  color: white;
   }
 }
 
-.siteNav {
-  // border: 1px solid black;
-	// background: #003380;
-
-  // background: #000;
-
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.nav__logo {
+	font-weight: 700;
+	text-transform: uppercase;
 }
+
+.nav__menu {
+	text-transform: uppercase;
+}
+
+.serviceMenuBar {
+	font-size: 14px;
+
+	> * {
+		// border: 1px solid red;
+		margin: 0;
+	  padding: 0;
+
+	  a {
+	  	padding: 20px 5px 20px 5px;
+	  	color: gold;
+	  }
+	}
+}
+
 
 
 
