--- a/src/sass/layout/_base.scss
+++ b/src/sass/layout/_base.scss
@@ -5,16 +5,13 @@ body {
 
 .l-stickyHeader {
 	flex: 0 0 auto;
-	background: red;
 }
 
 .l-stickyFooter {
 	flex: 0 0 auto;
-	background: red;
 }
 
-.stickyContent {
+.l-stickyContent {
   flex: 1 1 auto;
   overflow-y: scroll;
-  background: green;
 }
