--- a/src/sass/modules/_main-container.scss
+++ b/src/sass/modules/_main-container.scss
@@ -1,3 +1,16 @@
+.content {
+	margin: 0;
+	padding: 0;
+	min-width: 100%;
+
+	background: #000;
+
+}
+
 .mainContainer {
-	margin: 20px;
+	margin: 20px auto 20px auto;
+	max-width: 1170px;  
+
+	background: crimson;
+
 }
