--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -1,4 +1,3 @@
-
 $brushed-metal-width: 774px;
 $brushed-metal-height: 584px;
 $cylinder-width: 580px;
@@ -19,17 +18,34 @@ $cylinder-height: $cylinder-width;
 }
 
 .chamberContainer {
-	// position: absolute;
-
-  list-style: none;
   padding: 0;
   margin: 0;
 	width: 100%;
 	height: 1170px;
 
+	text-align: center;
 
-	background: url("../images/gun-chamber.png") no-repeat center;
+	background: url("../images/center-point.png") no-repeat center,
+		url("../images/gun-chamber.png") no-repeat center;
 	background-size: cover;
+}
+
+
+$chamber-diameter: 340px;
+
+.gunChamber {
+	margin-top: 70px;
+  border-radius: 50%;
+
+	width: $chamber-diameter;
+	height: $chamber-diameter;
+
+	&__image {
+		border-radius: 50%;
+		// margin: 3px;
+		max-widht: 100%;
+		max-height: 100%;
+	}
 }
 
 /* Container with the brushed metail background */
