--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -10,12 +10,28 @@ $chamber-container-wraper-width: 1170px;
 $chamber-container-height: 1170px;
 $chamber-container-width: 1170px;
 
-@mixin setBoxSize($width: 1170px, $height: 1210px, $factor) {
+@mixin chamberBoxDemension($factor, $width: 1170px, $height: 1210px) {
 	$width: $width * $factor;
 	$height: $height * $factor;
 
   width: $width ;
   height: $height;
+}
+
+@mixin chamberCircleDemension($factor, $width: 300px, $height: 300px) {
+	$width: $width * $factor;
+	$height: $height * $factor;
+
+  width: $width ;
+  height: $height;
+}
+
+@mixin chamberCircleLocation($factor, $top, $left) {
+	$top: (1170px - $top) * $factor;
+	$left: (1170px - $left) * $factor;
+
+	top: $top;
+	left: $left;
 }
 
 /* Container with the brushed metail background */
@@ -25,13 +41,13 @@ $chamber-container-width: 1170px;
 	margin-left: auto;
   margin-right: auto;
 
-	$chamge-size-factor: 1;
+	// $chamge-size-factor: 1;
 
 	// width: 100%;
 	// width: calc(#{$chamber-container-wraper-width} * #{$chamge-size-factor});
 	// height: calc(#{$chamber-container-wraper-height} * #{$chamge-size-factor});
 
-	@include setBoxSize(1170px, 1210px, 1.0);
+	@include chamberBoxDemension(1.0);
 
 	background: url("../images/black-brushed-metal.jpg") no-repeat center;
 	background-size: cover;
@@ -60,32 +76,13 @@ $chamber-container-width: 1170px;
 	background-size: cover;
 }
 
-	@media all and (max-width:1170px) {
-		$chamber-size-factor: 0.9;
-
-		.chamberContainerWraper {
-			// width: calc(#{$chamber-container-wraper-width} * #{$chamge-size-factor});
-			// width: calc(#{$chamber-container-wraper-width} * #{$chamber-size-factor});
-			// height: calc(#{$chamber-container-wraper-height} * #{$chamber-size-factor});
-
-			@include setBoxSize(1170px, 1210px, 0.9);
-
-		}
-
-		.chamberContainer {
-			// width: calc(#{$chamber-container-height} * #{$chamber-size-factor});
-			// height: calc(#{$chamber-container-width} * #{$chamber-size-factor});
-
-			@include setBoxSize(1170px, 1210px, 0.9);
-			
-		}
-	}
-
 .chamberCircle {
 	display: block;
 	position: absolute;
-	width: 320px;
-	height: 320px;
+	// width: 320px;
+	// height: 320px;
+
+	@include chamberCircleDemension(1.0);
 
 	&__image {
 		border-radius: 50%;
@@ -96,46 +93,96 @@ $chamber-container-width: 1170px;
 }
 
 .chamberContainer > li:nth-of-type(1) {
-	width: 340px;
-	height: 340px;
-	left: calc(1170px - 668px - 90px);
-	top: calc(1170px - 1000px - 90px);
+	@include chamberCircleDemension(1.0, 340px, 340px);
+
+	@include chamberCircleLocation(1.0, 1088px, 758px);
+
+	// left: calc(1170px - 758px);
+	// top: calc(1170px - 1090px);
 
   transform: rotate(0deg);
 }
 
 .chamberContainer > li:nth-of-type(2) {
-	left: calc(1170px - 350px - 90px);
-	top: calc(1170px - 840px - 90px);
+	@include chamberCircleLocation(1.0, 915px, 431px);
+
+	// left: calc(1170px - 440px);
+	// top: calc(1170px - 930px);
 
   transform: rotate(60deg);
 }
 
 .chamberContainer > li:nth-of-type(3) {
-	left: calc(1170px - 350px - 90px);
-	top: calc(1170px - 480px - 90px);
+	@include chamberCircleLocation(1.0, 563px, 428px);
+
+	// left: calc(1170px - 440px);
+	// top: calc(1170px - 570px);
 
   transform: rotate(120deg);
 }
 
 .chamberContainer > li:nth-of-type(4) {
-	left: calc(1170px - 668px - 70px);
-	top: calc(1170px - 300px - 90px);
+	@include chamberCircleLocation(1.0, 380px, 730px);
+
+	// left: calc(1170px - 730px);
+	// top: calc(1170px - 390px);
 
   transform: rotate(180deg);
 }
 
 .chamberContainer > li:nth-of-type(5) {
-	left: calc(1170px - 960px - 90px);
-	top: calc(1170px - 480px - 90px);
+	@include chamberCircleLocation(1.0, 558px, 1038px);
+
+	// left: calc(1170px - 1050px);
+	// top: calc(1170px - 570px);
 
   transform: rotate(240deg);
 }
 
 .chamberContainer > li:nth-of-type(6) {
-	left: calc(1170px - 960px - 90px);
-	top: calc(1170px - 830px - 90px);
+	@include chamberCircleLocation(1.0, 910px, 1040px);
+
+	// left: calc(1170px - 1050px);
+	// top: calc(1170px - 920px);
 
   transform: rotate(300deg);
 }
 
+@media all and (max-width:1170px) {
+	.chamberContainerWraper {
+		@include chamberBoxDemension(0.8);
+	}
+
+	.chamberContainer {
+		@include chamberBoxDemension(0.8);
+	}
+
+	.chamberCircle {
+		@include chamberCircleDemension(0.8);
+	}
+
+	.chamberContainer > li:nth-of-type(1) {
+		@include chamberCircleDemension(0.8, 340px, 340px);
+		@include chamberCircleLocation(0.8, 1082px, 758px);
+	}
+
+	.chamberContainer > li:nth-of-type(2) {
+		@include chamberCircleLocation(0.8, 900px, 420px);
+	}
+
+	.chamberContainer > li:nth-of-type(3) {
+		@include chamberCircleLocation(0.8, 535px, 415px);
+	}
+
+	.chamberContainer > li:nth-of-type(4) {
+		@include chamberCircleLocation(0.8, 350px, 730px);
+	}
+
+	.chamberContainer > li:nth-of-type(5) {
+		@include chamberCircleLocation(0.8, 528px, 1048px);
+	}
+
+	.chamberContainer > li:nth-of-type(6) {
+		@include chamberCircleLocation(0.8, 900px, 1050px);
+	}
+}
