--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -48,8 +48,8 @@ $chamber-container-width: 1170px;
 
 	.chamberSliderNav {
 		position: absolute;
-		// top: 0;
-		// left: 0;
+		top: 0;
+		left: 0;
 		z-index: 20;
 
 		&__arrow {
@@ -64,6 +64,21 @@ $chamber-container-width: 1170px;
 
 		&__arrow--right {
 			float: right;
+		}
+	}
+
+	.chamberNews {
+		position: absolute;
+		top: 60px;
+		left: 0;
+		margin: 0;
+		padding: 0;
+		z-index: 20;
+
+		&__panel {
+			background-color: crimson;
+			margin: 0;
+			padding: 10px;
 		}
 	}
 }
