--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -49,7 +49,8 @@ $chamber-container-width: 1170px;
 	.chamberSliderNav {
 		position: absolute;
 		top: 0;
-		left: 0;
+		// left: 0;
+		left: -300px;
 		z-index: 20;
 
 		&__arrow {
@@ -70,7 +71,8 @@ $chamber-container-width: 1170px;
 	.chamberNews {
 		position: absolute;
 		top: 60px;
-		left: 0;
+		// left: 0;
+		left: -300px;
 		margin: 0;
 		padding: 0;
 		z-index: 20;
