--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -1,6 +1,10 @@
 .l-navigation {
 	// border: 1px solid crimson;
 
+	&__mobileNav {
+	  display: none;
+	}
+
 	display: flex;
 
 	&__section {
@@ -25,6 +29,22 @@
 	  // background: darkmagenta;
 		flex: 2 2 30%;
 		justify-content: flex-end;
+	}
+
+	@media all and (max-width: 600px) { 
+		&__section:nth-of-type(2) {
+			display: none;
+		}
+
+		&__section:nth-of-type(3) {
+			display: none;
+		}
+
+		&__mobileNav {
+			display: block;
+		  flex: 2 2 70%;
+		  justify-content: flex-end;
+		}
 	}
 }
 
