--- a/src/sass/modules/_mobile-menu.scss
+++ b/src/sass/modules/_mobile-menu.scss
@@ -4,7 +4,14 @@
 	top: 0;
 	right: 0;
 	background-color: crimson;
-	width: 200px;
+	width: 300px;
 	height: 100%;
 	z-index: 30;
+
+	a {
+		width: 70px;
+		height: 70px;
+		float: right;
+		background-color: inherit;
+	}
 }
