--- a/src/sass/modules/_mobile-menu.scss
+++ b/src/sass/modules/_mobile-menu.scss
@@ -1,8 +1,9 @@
 .mobileMenu {
 	position: absolute;
-	display: none;
+	display: block;
 	top: 0;
-	right: 0;
+	left: -1000px;
+	// right: 0;
 	background-color: crimson;
 	width: 300px;
 	height: 100%;
