--- a/src/scripts/sass-temp-landing-11/modules/_mobile-menu.scss
+++ b/src/scripts/sass-temp-landing-11/modules/_mobile-menu.scss
@@ -1,9 +1,8 @@
 .mobileMenu {
 	position: absolute;
-	display: none;
+	display: block;
 	top: 0;
-	// left: -1000px;
-	right: 0;
+	left: -1000px;
 	// right: 0;
 	background-color: crimson;
 	width: 300px;
