--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -57,14 +57,10 @@
   }
 }
 
-// .l-mobileFooter {
-// 	display: none;
-// }
-
 @media all and (max-width: 650px) {
 	.l-footer {
 		// position: relative;
-    border: 1px solid red;
+    // border: 1px solid red;
     flex-direction: column;
 
     &__section__01 {
@@ -73,32 +69,15 @@
     } 
 
     &__section__02 {
-      background: green;
+      // background: green;
       flex: 1 1 100%;
       align-items: center; 
     }  
 
     &__section__03 {
-      background: purple;
+      // background: purple;
       flex: 1 1 100%;
-      align-items: center; 
+      justify-content: center;
     } 
 	}
-
-
-
-	// .l-mobileFooter {
-	// 	display: none;
-	// 	display:flex;
-
-	// 	&__menu {
-	// 		flex: 1;
-	// 	}
-	// }
-
-	// .l-mobileFooter--fixed {
-	// 	position: fixed;
-	//   left: 0px;
-	//   bottom: 0px;
-	// }
 }
