Fix footer layout

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 .l-footer {
-	// position: fixed;
- //  left: 0px;
- //  bottom: 0px;
+	position: fixed;
+  left: 0px;
+  bottom: 0px;
+  
   margin: 0;
 
   display: flex;
