Fix footer layout

--- a/src/scripts/sass-temp-landing-12/modules/_footer.scss
+++ b/src/scripts/sass-temp-landing-12/modules/_footer.scss
@@ -1,8 +1,11 @@
 .footer {
 	width: 100%;
+	padding-top: 100px;
   color: white;
   font-weight: 100;
   background: rgba(0,0,0,0.9);
+  // background: linear-gradient(to top, #000,#eee,transparent);
+  background: linear-gradient(to top, #000 36%,#708090 43%,#474747 66%,transparent 100%);
 
   &__section {
   	padding: 10px 0 10px 0;
