--- a/src/scripts/sass-temp-landing-12/modules/_mobile-menu.scss
+++ b/src/scripts/sass-temp-landing-12/modules/_mobile-menu.scss
@@ -1,8 +1,9 @@
 .mobileMenu {
 	position: absolute;
-	display: block;
+	display: none;
 	top: 0;
-	left: -1000px;
+	// left: -1000px;
+	right: 0;
 	// right: 0;
 	background-color: crimson;
 	width: 300px;
