--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -3,14 +3,14 @@ $brushed-metal-width2: 1170px;
 $cylinder-height2: 1170px;
 $cylinder-width2: 1170px;
 
-
 $chamber-container-wraper-height: 1210px;
 $chamber-container-wraper-width: 1170px;
 
 $chamber-container-height: 1170px;
 $chamber-container-width: 1170px;
 
-@mixin chamberBoxDemension($factor, $width: 1170px, $height: 1210px) {
+// @mixin chamberBoxDemension($factor, $width: 1170px, $height: 1210px) {
+@mixin chamberBoxDemension($factor, $width: 1170px, $height: 1170px) {
 	$width: $width * $factor;
 	$height: $height * $factor;
 
@@ -43,8 +43,8 @@ $chamber-container-width: 1170px;
 
 	@include chamberBoxDemension(1.0);
 
-	// background: url("../images/black-brushed-metal.jpg") no-repeat center;
-	// background-size: cover;
+	background: url("../images/black-brushed-metal.jpg") no-repeat center;
+	background-size: cover;
 
 	.chamberSliderNav {
 		position: absolute;
@@ -92,31 +92,27 @@ $chamber-container-width: 1170px;
 	top: 0;
 	left: 0;
 
-	// width: $chamber-container-height;
-	// height: $chamber-container-width;
-
 	@include chamberBoxDemension(1.0, 1170px, 1170px);
 
 	margin-left: auto;
   margin-right: auto;
 
-	background: url("../images/center-point.png") no-repeat center,
-			url("../images/gun-chamber.png") no-repeat center;
+	background: url("../images/gun-chamber.png") no-repeat center;
 	background-size: cover;
+	// background: url("../images/center-point.png") no-repeat center,
+	// 		url("../images/gun-chamber.png") no-repeat center;
 }
 
 .chamberCircle {
 	display: block;
 	position: absolute;
-	// width: 320px;
-	// height: 320px;
 
 	@include chamberCircleDemension(1.0);
 
 	&__image {
 		border-radius: 50%;
 		margin: 3px;
-		max-widht: 100%;
+		max-width: 100%;
 		max-height: 100%;
 	}
 }
@@ -126,17 +122,11 @@ $chamber-container-width: 1170px;
 
 	@include chamberCircleLocation(1.0, 1088px, 758px);
 
-	// left: calc(1170px - 758px);
-	// top: calc(1170px - 1090px);
-
   transform: rotate(0deg);
 }
 
 .chamberContainer > li:nth-of-type(2) {
 	@include chamberCircleLocation(1.0, 915px, 431px);
-
-	// left: calc(1170px - 440px);
-	// top: calc(1170px - 930px);
 
   transform: rotate(60deg);
 }
@@ -144,17 +134,11 @@ $chamber-container-width: 1170px;
 .chamberContainer > li:nth-of-type(3) {
 	@include chamberCircleLocation(1.0, 563px, 428px);
 
-	// left: calc(1170px - 440px);
-	// top: calc(1170px - 570px);
-
   transform: rotate(120deg);
 }
 
 .chamberContainer > li:nth-of-type(4) {
 	@include chamberCircleLocation(1.0, 380px, 730px);
-
-	// left: calc(1170px - 730px);
-	// top: calc(1170px - 390px);
 
   transform: rotate(180deg);
 }
@@ -162,17 +146,11 @@ $chamber-container-width: 1170px;
 .chamberContainer > li:nth-of-type(5) {
 	@include chamberCircleLocation(1.0, 558px, 1038px);
 
-	// left: calc(1170px - 1050px);
-	// top: calc(1170px - 570px);
-
   transform: rotate(240deg);
 }
 
 .chamberContainer > li:nth-of-type(6) {
 	@include chamberCircleLocation(1.0, 910px, 1040px);
-
-	// left: calc(1170px - 1050px);
-	// top: calc(1170px - 920px);
 
   transform: rotate(300deg);
 }
@@ -192,65 +170,68 @@ $chamber-container-width: 1170px;
 
 	.chamberContainer > li:nth-of-type(1) {
 		@include chamberCircleDemension(0.8, 340px, 340px);
-		@include chamberCircleLocation(0.8, 1082px, 758px);
+		@include chamberCircleLocation(0.8, 1090px, 758px);
 	}
 
 	.chamberContainer > li:nth-of-type(2) {
-		@include chamberCircleLocation(0.8, 900px, 420px);
+		@include chamberCircleLocation(0.8, 910px, 426px);
 	}
 
 	.chamberContainer > li:nth-of-type(3) {
-		@include chamberCircleLocation(0.8, 535px, 415px);
+		@include chamberCircleLocation(0.8, 564px, 424px);
 	}
 
 	.chamberContainer > li:nth-of-type(4) {
-		@include chamberCircleLocation(0.8, 350px, 730px);
+		@include chamberCircleLocation(0.8, 382px, 730px);
 	}
 
 	.chamberContainer > li:nth-of-type(5) {
-		@include chamberCircleLocation(0.8, 528px, 1048px);
+		@include chamberCircleLocation(0.8, 560px, 1042px);
 	}
 
 	.chamberContainer > li:nth-of-type(6) {
-		@include chamberCircleLocation(0.8, 900px, 1050px);
+		@include chamberCircleLocation(0.8, 900px, 1044px);
 	}
 }
 
 @media all and (max-width:950px) {
 	.chamberContainerWraper {
-		@include chamberBoxDemension(0.6);
+		@include chamberBoxDemension(0.7);
+		// border: 1px solid red;
 	}
 
 	.chamberContainer {
-		@include chamberBoxDemension(0.6);
+		// border: 1px solid white;
+		margin: 0;
+		@include chamberBoxDemension(0.7);
 	}
 
 	.chamberCircle {
-		@include chamberCircleDemension(0.6);
+		@include chamberCircleDemension(0.7);
 	}
 
 	.chamberContainer > li:nth-of-type(1) {
-		@include chamberCircleDemension(0.6, 340px, 340px);
-		@include chamberCircleLocation(0.6, 1082px, 758px);
+		@include chamberCircleDemension(0.7, 340px, 340px);
+		@include chamberCircleLocation(0.7, 1086px, 758px);
 	}
 
 	.chamberContainer > li:nth-of-type(2) {
-		@include chamberCircleLocation(0.6, 900px, 420px);
+		@include chamberCircleLocation(0.7, 904px, 418px);
 	}
 
 	.chamberContainer > li:nth-of-type(3) {
-		@include chamberCircleLocation(0.6, 535px, 415px);
+		@include chamberCircleLocation(0.7, 564px, 418px);
 	}
 
 	.chamberContainer > li:nth-of-type(4) {
-		@include chamberCircleLocation(0.6, 350px, 730px);
+		@include chamberCircleLocation(0.7, 380px, 730px);
 	}
 
 	.chamberContainer > li:nth-of-type(5) {
-		@include chamberCircleLocation(0.6, 528px, 1048px);
+		@include chamberCircleLocation(0.7, 560px, 1040px);
 	}
 
 	.chamberContainer > li:nth-of-type(6) {
-		@include chamberCircleLocation(0.6, 900px, 1050px);
+		@include chamberCircleLocation(0.7, 900px, 1040px);
 	}
 }
