--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -114,6 +114,11 @@ $chamber-container-width: 1170px;
 		margin: 3px;
 		max-width: 100%;
 		max-height: 100%;
+		opacity: .5;
+
+		&:hover {
+			opacity: 1;
+		}
 	}
 }
 
