--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -124,8 +124,11 @@ $chamber-container-width: 1170px;
 
 .chamberContainer > li:nth-of-type(1) {
 	@include chamberCircleDemension(1.0, 340px, 340px);
-
 	@include chamberCircleLocation(1.0, 1088px, 758px);
+
+	.chamberCircle__image {
+		opacity: 1;
+	}
 
   transform: rotate(0deg);
 }
