--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -163,6 +163,64 @@ $chamber-container-width: 1170px;
   transform: rotate(300deg);
 }
 
+.chamberContainer__content {
+	background-color: green;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin-left: 0px;
+	margin-right: 0px;
+	top: 490px;
+	padding-right: 30px;
+	padding-left: 30px;
+	pointer-events: none;
+	.chamberContainer__content--teaser {
+		text-align: center;
+		.chamberContainer__content--title {
+			padding: 5px 15px;
+	        margin: 0 auto;
+	        display: table;
+	        margin-top: 30px;
+	        color: white;
+	        font-size: 2.25rem;
+	        margin: 0 auto;
+	        padding: 0px;
+	        line-height: initial;
+	        text-decoration: none;
+		}
+		
+		.chamberContainer__content--description  {
+				color: #a1a1a1;
+				font-size: 1.25rem;			
+		}
+	}
+	a {
+		pointer-events: auto;
+	}
+	.btn {
+		margin-top: 20px;
+		margin-bottom: 20px;
+		pointer-events: auto;
+	}
+}
+
+.btn-primary {
+    background-color: #fac43d;
+  color: #000000;
+  font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
+  font-weight: 700;
+  border: none;
+  text-transform: capitalize;
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+
+
 @media all and (max-width:1170px) {
 	.chamberContainerWraper {
 		@include chamberBoxDemension(0.8);
