Remove the evt.preventDefault

--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -55,7 +55,7 @@ $chamber-container-width: 1170px;
 
 		&__arrow {
 			display: block;
-			background-color: darkgreen;
+			// background-color: darkgreen;
 			width: 100px;
 		}
 
@@ -164,7 +164,7 @@ $chamber-container-width: 1170px;
 }
 
 .chamberContainer__content {
-	border: 1px solid green;
+	// border: 1px solid green;
 	text-align: center;
 	position: absolute;
 	left: 0;
