--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 @import "base/all-base";
 @import "layout/all-layouts";
 @import "modules/all-modules";  
-@import "states/all-states";  
+@import "state/all-states";  
 
 .icon::before {
   display: inline-block;
