--- a/src/sass/modules/_brushed-metal.scss
+++ b/src/sass/modules/_brushed-metal.scss
@@ -194,6 +194,7 @@ $chamber-container-width: 1170px;
 				color: #a1a1a1;
 				font-size: 1.25rem;			
 		}
+
 	}
 	a {
 		pointer-events: auto;
@@ -301,3 +302,13 @@ $chamber-container-width: 1170px;
 		@include chamberCircleLocation(0.7, 900px, 1040px);
 	}
 }
+
+.animatedText {
+			// color: red;
+			background-image: linear-gradient(to right, transparent 50%, yellow 50%);
+			background-size: 200%;
+			transition: background-position 0.5s;
+			&:hover {
+				transition: background-position -100%;
+			}
+		}
