--- a/src/sass/modules/_styled-select.scss
+++ b/src/sass/modules/_styled-select.scss
@@ -1,18 +1,32 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('../fonts/icomoon/icomoon.eot?-rdnm34');
+	src:url('../fonts/icomoon/icomoon.eot?#iefix-rdnm34') format('embedded-opentype'),
+		url('../fonts/icomoon/icomoon.woff?-rdnm34') format('woff'),
+		url('../fonts/icomoon/icomoon.ttf?-rdnm34') format('truetype'),
+		url('../fonts/icomoon/icomoon.svg?-rdnm34#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 div.styledSelect {
 	display: inline-block;
 	vertical-align: middle;
 	position: relative;
 	text-align: left;
-	background: #fff;
 	z-index: 100;
-	width: 100%;
-	max-width: 500px;
 	-webkit-touch-callout: none;
 	user-select: none;
+
+	&--default {
+		background: #fff;
+		width: 100%;
+		max-width: 500px;
+	}
 }
 
 div.styledSelect:focus {
-	outline: none; /* For better accessibility add a style for this in your skin */
+	outline: none; 
 }
 
 .styledSelect select {
@@ -101,20 +115,7 @@ div.cs-active {
 	cursor: default;
 }
 
-
-// Bordered: 
-@font-face {
-	font-family: 'icomoon';
-	src:url('../fonts/icomoon/icomoon.eot?-rdnm34');
-	src:url('../fonts/icomoon/icomoon.eot?#iefix-rdnm34') format('embedded-opentype'),
-		url('../fonts/icomoon/icomoon.woff?-rdnm34') format('woff'),
-		url('../fonts/icomoon/icomoon.ttf?-rdnm34') format('truetype'),
-		url('../fonts/icomoon/icomoon.svg?-rdnm34#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-div.cs-skin-border {
+div.styledSelect--primary {
 	background: transparent;
 	font-size: 2em;
 	font-weight: 700;
@@ -122,27 +123,27 @@ div.cs-skin-border {
 }
 
 @media screen and (max-width: 30em) {
-	div.cs-skin-border { font-size: 1em; }
+	div.styledSelect--primary { font-size: 1em; }
 }
 
-.cs-skin-border > span {
+.styledSelect--primary > span {
 	border: 5px solid #000;
 	border-color: inherit;
 	transition: background 0.2s, border-color 0.2s;
 }
 
-.cs-skin-border > span::after,
-.cs-skin-border .cs-selected span::after {
+.styledSelect--primary > span::after,
+.styledSelect--primary .cs-selected span::after {
 	font-family: 'icomoon';
 	content: '\e000';
 }
 
-.cs-skin-border ul span::after {
+.styledSelect--primary ul span::after {
 	content: '';
 	opacity: 0;
 }
 
-.cs-skin-border .cs-selected span::after {
+.styledSelect--primary .cs-selected span::after {
 	content: '\e00e';
 	color: #ddd9c9;
 	font-size: 1.5em;
@@ -150,30 +151,30 @@ div.cs-skin-border {
 	transition: opacity 0.2s;
 }
 
-.cs-skin-border.cs-active > span {
+.styledSelect--primary.cs-active > span {
 	background: #fff;
 	border-color: #fff;
 	color: #2980b9;
 }
 
-.cs-skin-border .cs-options {
+.styledSelect--primary .cs-options {
 	color: #2980b9;
 	font-size: 0.75em;
 	opacity: 0;
 	transition: opacity 0.2s, visibility 0s 0.2s;
 }
 
-.cs-skin-border.cs-active .cs-options {
+.styledSelect--primary.cs-active .cs-options {
 	opacity: 1;
 	transition: opacity 0.2s;
 }
 
-.cs-skin-border ul span {
+.styledSelect--primary ul span {
 	padding: 1em 2em;
 	backface-visibility: hidden;
 }
 
-.cs-skin-border .cs-options li span:hover,
-.cs-skin-border li.cs-focus span {
+.styledSelect--primary .cs-options li span:hover,
+.styledSelect--primary li.cs-focus span {
 	background: #f5f3ec;
 }
