--- a/src/sass/base/_all-base.scss
+++ b/src/sass/base/_all-base.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box; 
+  font-size: 16px;
 }
 
 *, *:before, *:after {
@@ -8,6 +9,7 @@ html {
 
 body {
   font-family: sans-serif;
+  font-size: 1.0rem;
 
   margin: 0;
 
